--- a/CarRepairShop/src/views/layout.ejs
+++ b/CarRepairShop/src/views/layout.ejs
@@ -8,6 +8,10 @@
     <link rel="icon" type="image/png" href="/images/Icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css" nonce="<%= nonce %>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" nonce="<%= nonce %>">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="manifest" href="/js/manifest.json">
+    <link rel="icon" type="image/png" href="/images/icon.png">
         <!-- Local bootstrap.js-->
         <script src="/js/bootstrap.js" nonce="<%= nonce %>"></script>
         <script src="/js/app.js" nonce="<%= nonce %>"></script>
