--- a/CarRepairShop/src/views/pages/UserAppointment.ejs
+++ b/CarRepairShop/src/views/pages/UserAppointment.ejs
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="manifest" href="/js/manifest.json">
-
-</head>
 
 <body>
-
-    <div class="container my-4 bg-light rounded">
+<div class="appointment-container">
+    <div class="container  bg-light rounded appointment-content ">
         <h2 class="text-center mb-4 text-white"><%= __('Your Appointments') %></h2>
 
         <!-- Table to display appointment data -->
@@ -30,8 +21,7 @@
                 </tbody>
             </table>
         </div>
-
+        </div>
         <script src="/js/UserAppointment.js" nonce="<%= nonce %>"></script>
 </body>
 
-</html>
