--- a/CarRepairShop/src/views/pages/Notif_settings.ejs
+++ b/CarRepairShop/src/views/pages/Notif_settings.ejs
@@ -1,25 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="manifest" href="/js/manifest.json">
-
-</head>
 
 <body>
     <div id="customNotificationAlert" class="custom-alert nodisplay">
         <h2><%= __('Notification settings updated') %></h2>
     </div>
-    <div class="container col-lg-3 mt-5 p-4 text-white bg-light rounded-lg">
-        <h1 class="m-2 text-center"><%= __('Notification settings') %></h1>
-
-        <div class="container m-auto mx-80 mix-40 m-2 p-2">
+    <div class="settings-container">
+    <div class="settings-content">
+        <h1 class=" text-center"><%= __('Notification settings') %></h1>
+        <hr class="bg-white">
             <div class="form-group text-white">
                 <label for="Notifications"><%= __('Special deal notifications') %></label>
-                <select class="form-control" id="Notifications" name="Notifications" required>
+                <select class="form-control form-control-select" id="Notifications" name="Notifications" required>
                     <option value="None"><%= __('No notifications') %></option>
                     <option value="Offers"><%= __('Special deals/offers') %></option>
                     <option value="OilChange"><%= __('Oil change reminders') %></option>
@@ -27,18 +17,16 @@
                 </select>
             </div>
             <label for="Reminders"><%= __('Appointment reminders') %></label>
-            <select class="form-control" id="repairType" name="repairType" required>
+            <select class="form-control form-control-select" id="repairType" name="repairType" required>
                 <option value="None"><%= __('No notifications') %></option>
                 <option value="Day"><%= __('Remind me 1 day before') %></option>
                 <option value="Hour"><%= __('Remind me 1 hour before') %></option>
                 <option value="Both"><%= __('Remind me both 1 day and 1 hour before') %></option>
             </select>
-            <p class="mt-3"><%= __('Notifications are sent by email') %></p>
+            <p class="mt-3">*<%= __('Notifications are sent by email') %></p>
             <button type="submit" class="btn btn-secondary btn-block"><%= __('Save settings') %></button>
-        </div>
+    </div>
     </div>
     <script nonce="<%= nonce %>">const csrfToken = "<%= csrfToken %>";</script>
     <script src="/js/Notif_settings.js" nonce="<%= nonce %>"></script>
 </body>
-
-</html>
